samples/_failures_safe/1761487021_7e7ab6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37810278.c: In function ‘main’:
./samples/SAFE/__tmp_37810278.c:173:25: error: missing terminating " character
  173 |         fprintf(stderr, "Error
      |                         ^~~~~~
./samples/SAFE/__tmp_37810278.c:173:9: error: expected expression at end of input
  173 |         fprintf(stderr, "Error
      |         ^~~~~~~
./samples/SAFE/__tmp_37810278.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37810278.c:173:9: error: expected declaration or statement at end of input
